Prevent pull to refresh on mobile devices

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -127,3 +127,16 @@ textarea:not([rows]) {
 :target {
   scroll-margin-block: 5ex;
 }
+
+/* prevent pull to refresh functionality */
+html,
+body {
+  overscroll-behavior-y: none;
+  overflow: hidden;
+  height: 100%;
+}
+#app {
+  overflow: auto;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+}
